[package]
name = "ethereum-address-grinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version = "0.24.0", features = ["global-context", "rand"]}
rand = "0.8.5"
sha3 = "0.10.2"
hex = "0.4.3"