[package]
name = "ethereum-address-grinder"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version = "0.28.1", features = ["global-context", "rand"]}
rand = "0.8.5"
sha3 = "0.10.8"
hex = "0.4.3"
